# reeeductio

./: 404.html  AUTHORIZATION.md  EVENT_SOURCED_STATE.md  LOGIN.md  MUSIC.md  PROJECT_STRUCTURE.md  README.md  TODO.md  TYPED_IDENTIFIERS.md  index.html  openapi.yaml  pyproject.toml  sitemap.xml  start.sh
.github/workflows/: publish-backend.yml  publish-python-sdk.yml  publish-typescript-sdk.yml
DOCS_PLAN/: index.html
TODO/: index.html
backend/: .dockerignore  ADMIN.md  DOCKER.md  Dockerfile  FIRESTORE_MIGRATION.md  LOGGING.md  TODO.md  authorization.py  blob_manager.py  blob_store.py  channel.py  channel_manager.py  config.e2e-minio.yaml  config.e2e.yaml  config.example.yaml  config.firestore.example.yaml  config.py  crypto.py  data_store.py  database.py  database_blob_manager.py  database_blob_store.py  docker-compose.e2e.yml  docker-compose.yml  exceptions.py  filesystem_blob_manager.py  filesystem_blob_store.py  firestore_data_store.py  firestore_message_store.py  firestore_state_store.py  identifiers.py  logging_config.py  lru_cache.py  main.py  message_store.py  path_validation.py  pyproject.toml  s3_blob_manager.py  s3_blob_store.py  space.py  (+12 more)
backend/tests/: README.md  conftest.py  test_admin_space.py  test_authorization.py  test_blob_auth.py  test_blob_storage.py  test_chain_conflict.py  test_chain_of_trust.py  test_crypto.py  test_database.py  test_firestore_stores.py  test_identifiers.py  test_integration.py  test_message_storage.py  test_opaque.py  test_path_validation.py  test_path_validation_integration.py  test_rbac.py  test_s3_blob_storage.py  test_state_events.py  test_state_storage.py  (+2 more)
client/: example_client.py
docs/: TODO.md
new-python-sdk/: pyproject.toml
python-sdk/: README.md  pyproject.toml
python-sdk/examples/: key_derivation.py
python-sdk/reeeductio/: __init__.py  blobs.py  client.py  crypto.py  models.py
python-sdk/reeeductio/cli/: README.md  main.py  utils.py
python-sdk/reeeductio/cli/commands/: __init__.py  auth.py  blob.py  opaque.py  role.py  space.py  tool.py  user.py
python-sdk/tests/: test_cli.py  test_e2e.py  test_e2e_async.py  test_key_derivation.py  test_smoke.py
search/: search_index.json
typescript-sdk/: TODO.md  package-lock.json  package.json  tsconfig.json
(+64 files in other folders)
