[project]
name = "reeducto"
version = "1.0.0"
description = "End-to-end encrypted PubSub messaging system with capability-based authorization"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.10.0",
    "pyjwt>=2.8.0",
    "cryptography>=42.0.0",
    "python-multipart>=0.0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = [
    "main.py",
    "database.py",
    "crypto.py",
    "authorization.py",
    "test_backend.py",
    "example_client.py",
]
