[project]
name = "reeeductio"
version = "0.1.0"
description = "A client library for accessing reeeductio Spaces API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.23.0,<0.29.0",
    "python-dateutil>=2.8.0",
    "cryptography>=41.0.0",
    "websockets>=12.0",
    "click>=8.0.0",
    "opaque-snake",
]
authors = [{name = "Charles V Wright", email = "cvwright@fastmail.com"}]
license = {file = ["LICENSE-APACHE", "LICENSE-MIT"]}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "License :: OSI Approved :: MIT License",
]
keywords = ["spaces", "e2ee", "security", "privacy", "encryption"]

[project.urls]
Homepage = "https://github.com/cvwright/reeeductio/tree/main/python-sdk"
Repository = "https://github.com/cvwright/reeeductio"

[project.scripts]
reeeductio-admin = "reeeductio.cli.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["reeeductio"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "e2e: end-to-end tests requiring a running backend (docker-compose.e2e.yml)",
]
